--- a/moveit/src/styles/components/ExperienceBar.module.css
+++ b/moveit/src/styles/components/ExperienceBar.module.css
@@ -1,24 +1,13 @@
-
-.container {
-  height: 100vh;
-  max-width: 992px;
-  margin: 0 auto;
-  padding: 2.5rem 2rem;
-
-  display: flex;
-  flex-direction: column;
-}
-
-.experience-bar {
+.experienceBar {
   display: flex;
   align-items: center;
 }
 
-.experience-bar span {
+.experienceBar span {
   font-size: 1rem;
 }
 
-.experience-bar > div {
+.experienceBar > div {
   flex: 1;
   height: 4px;
   border-radius: 4px;
@@ -27,13 +16,13 @@
   position: relative;
 }
 
-.experience-bar > div > div {
+.experienceBar > div > div {
   height: 4px;
   border-radius: 4px;
   background: var(--green);
 }
 
-span.current-experience {
+span.currentExperience {
   position: absolute;
   top: 12px;
   transform: translateX(-50%);
